--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 						<div class="social-links">
 							<ul>
 								<li>
-									<a href="#"><i class="icon icon-facebook"></i></a>
+									<a href="http://localhost:8001/facebook/callback"><i class="icon icon-facebook"></i></a>
 								</li>
 								<li>
 									<a href="#"><i class="icon icon-twitter"></i></a>
