--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,8 @@
 									class="icon icon-user"></i><span>Login</span></a>
 							<a href="http://localhost:8001/view-cart" class="cart for-buy"><i
 									class="icon icon-clipboard"></i><span>Cart</span></a>
-
+							<a id="order-history" href="http://localhost:8001/order-history" class="cart for-buy"><i
+									class="icon icon-clipboard"></i><span>Order History</span></a>
 							<div class="action-menu">
 
 								<div class="search-bar">
@@ -1258,7 +1259,7 @@
 	<script src="js/script.js"></script>
 
 	<script>
-		
+
 
 		$("#success").show().delay(2000).fadeOut();
 		$("#error").show().delay(2000).fadeOut();
