--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
 									class="icon icon-user"></i><span>Account</span></a>
 							<a id="auth-link" href="http://localhost:8001/login" class="user-account for-buy"><i
 									class="icon icon-user"></i><span>Login</span></a>
+							<a id="auth-link" href="http://localhost:8001/logout" class="user-account for-buy"><i
+									class="icon icon-user"></i><span>Logout</span></a>
 							<a href="http://localhost:8001/view-cart" class="cart for-buy"><i
 									class="icon icon-clipboard"></i><span>Cart</span></a>
 							<a id="order-history" href="http://localhost:8001/order-history" class="cart for-buy"><i
